--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -125,7 +125,7 @@
             border-color: $red;
         }
 
-        &.invalid {
+        &.inactive {
             border-color: $orange;
         }
 
