User visible changes for post-processing

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -79,7 +79,9 @@
             background-color: $orange;
         }
 
-        &.status-20 {
+        &.status-20,
+        &.status-25,
+        &.status-27 {
             display: block;
             background-color: $blue;
         }
