Update layout with footer to make it work with React

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_F.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_F.cshtml
@@ -3,7 +3,9 @@
 }
 
 <div id="content-wrapper">
-    @RenderBody()
+    <div id="content-container">
+        @RenderBody()
+    </div>
     @Html.Partial("_Footer")
 </div>
 
