--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
@@ -1,5 +1,8 @@
-﻿body {
-    font-family: "Helvetica Neue", sans-serif;
+﻿@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body {
+    font-family: "Roboto", "Helvetica Neue", sans-serif;
+    font-weight: 300;
     background-color: $light-grey;
     color: $charcoal;
     height: 100%;
