--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/input.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/input.scss
@@ -7,7 +7,7 @@
         position: relative;
         display: flex;
         flex-flow: row nowrap;
-        height: 4rem;
+        height: 3.5rem;
         width: 100%;
         align-self: flex-start;
         margin-bottom: .5rem;
@@ -16,19 +16,35 @@
             border: 2px solid $red;
         }
 
-        .input-icon-label {
+        .input-icon-label,
+        .action-icon-label {
             flex: 0 0 auto;
             height: 100%;
-            width: 4rem;
-            background-color: $blue;
+            width: 3.5rem;
             border: 1px solid $charcoal;
-            border-right: none;
             padding: .5rem;
 
-            .input-icon {
+
+            .input-icon,
+            .action-icon {
                 height: 100%;
                 width: 100%;
                 color: $white;
+            }
+        }
+
+        .input-icon-label {
+            background-color: $blue;
+            border-right: none;
+        }
+
+        .action-icon-label {
+            cursor: pointer;
+            background-color: $green;
+            border-left: none;
+
+            &:hover {
+                background-color: darken($green, 5%);
             }
         }
 
@@ -57,14 +73,14 @@
 
                 &:not([value='']),
                 &:focus {
-                    padding: 1.25rem .5rem .25rem;
+                    padding: 1.25rem .5rem .1rem;
                 }
 
                 &:not([value='']) + .form-input-label,
                 &:focus + .form-input-label {
                     top: 0;
                     opacity: 1;
-                    transition: all .25s;
+                    transition: all .5s;
                 }
 
                 &:focus::placeholder {
@@ -74,32 +90,14 @@
 
             .form-input-label {
                 position: absolute;
-                top: .5rem;
+                top: .25rem;
                 left: 0;
-                padding: .5rem;
+                padding: .25rem .5rem;
                 font-size: .75rem;
                 font-weight: 300;
                 color: $dark-grey;
                 opacity: 0;
             }
-
-            .action-icon {
-                position: absolute;
-                top: 0;
-                right: 0;
-                height: 100%;
-                width: 4rem;
-                color: $green;
-                z-index: 2;
-            }
-        }
-
-        .error-icon {
-            flex: 0 0 auto;
-            height: 3rem;
-            width: 3rem;
-            z-index: 2;
-            color: $red;
         }
     }
 
