--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/login/login.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/login/login.scss
@@ -24,84 +24,91 @@
     }
 }
 
-    #login-wrapper {
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
+#login-wrapper {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    height: 100vh;
+    width: 40vw;
+    padding: 1em 5vw;
+
+    #login-container {
         display: flex;
         flex-flow: column nowrap;
-        height: 100vh;
-        width: 40vw;
-        padding: 1em 5vw;
+        flex: 1 0 auto;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        margin: 0 auto;
+        padding: 1em;
+        width: 30rem;
+        max-width: 95vw;
 
-        #login-container {
-            display: flex;
-            flex-flow: column nowrap;
-            flex: 1 0 auto;
-            align-items: center;
-            justify-content: center;
-            align-self: center;
-            margin: 0 auto;
-            padding: 1em;
-            max-width: 95vw;
+        #login-form-container {
+            display: inline-block;
+            text-align: center;
             width: 100%;
+            margin: 0 auto;
 
-            #login-form-container {
-                display: inline-block;
-                text-align: center;
+            #login-logo-container {
+                margin-bottom: 2em;
+                padding: .5em;
                 width: 100%;
-                margin: 0 auto;
 
-                #login-logo-container {
-                    margin-bottom: 2em;
-                    padding: .5em;
+                #login-logo {
                     width: 100%;
+                    height: 2.5rem;
 
-                    #login-logo {
+                    svg {
                         width: 100%;
-                        height: 2.5rem;
+                    }
+                }
+            }
 
-                        svg {
-                            width: 100%;
-                        }
+            #login-form {
+
+                .login-form-input-container {
+                    text-align: left;
+                    margin-bottom: .5em;
+
+                    input {
+                        margin-bottom: 1em;
                     }
                 }
 
-                #login-form {
-
-                    .login-form-input-container {
-                        text-align: left;
-                        margin-bottom: .5em;
-
-                        input {
-                            margin-bottom: 1em;
-                        }
-                    }
-
-                    .login-form-button-container {
-                        padding-top: .25em;
-                        text-align: right;
-                    }
+                .login-form-button-container {
+                    padding-top: .25em;
+                    text-align: right;
                 }
             }
         }
     }
+}
 
+.login-warning {
+    display: block;
+    font-style: italic;
+    color: $red;
+    padding: .25rem;
+    margin: .25rem;
+}
 
-    footer a {
-        color: $white !important;
-    }
+footer a {
+    color: $white !important;
+}
 
-    footer #copyright {
-        color: $charcoal !important;
-    }
+footer #copyright {
+    color: $charcoal !important;
+}
 
-    footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: transparent;
-        z-index: 20;
-    }
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    z-index: 20;
+}
