--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_toastr_overrides.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_toastr_overrides.scss
@@ -1,12 +1,12 @@
-.toast-info {
+.rrt-info, .toast-info {
     background-color: $blue !important;
 }
-.toast-error {
+.rrt-error, .toast-error {
     background-color: $orange !important;
 }
-.toast-success {
+.rrt-success, .toast-success {
     background-color: $green !important;
 }
-.toast-warning {
+.rrt-warning, .toast-warning {
     background-color: $red !important;
 }
