Switch from input specific styling to form element styling
Since a lot of this will be relavent to all form elements, make this less specific.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -95,6 +95,7 @@
                     padding: 1.25rem .5rem .1rem;
                 }
 
+                &[readonly] + .form-input-label,
                 &[disabled] + .form-input-label,
                 &:not([value='']) + .form-input-label,
                 &:focus + .form-input-label {
@@ -103,9 +104,10 @@
                     transition: opacity .5s, top .5s;
                 }
 
-                &[disabled]::placeholder,
+                &[readonly]::placeholder,
+                &[disabled]::placholder,
                 &:focus::placeholder {
-                    color: transparent;
+                    color: transparent !important;
                 }
             }
 
@@ -133,3 +135,6 @@
     }
 }
 
+.button-container {
+    text-align: right;
+}
