--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -65,6 +65,17 @@
             &:hover {
                 background-color: darken($green, 5%);
             }
+
+            &.waiting {
+                
+                &:hover {
+                    background-color: $green;
+                }
+
+                svg {
+                    animation: rotating 1s linear infinite;
+                }
+            }
         }
 
         .form-input-container {
@@ -156,5 +167,23 @@
     &.hidden {
         top: -1rem;
         opacity: 0;
+    }
+}
+
+@keyframes rotating {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
