--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -159,15 +159,12 @@
                 .card-body-primary-text-box {
                     margin: 0;
 
-                    h2 {
-                        margin-bottom: 0;
-                        border: 1px solid transparent;
-                    }
-
                     input {
                         padding: 0;
-                        font-size: 1.5em;
+                        font-size: 1em;
                         font-weight: bold;
+                        margin-bottom: -1px;
+                        height: inherit;
                     }
 
                     &:disabled {
