Add style for orange modals

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
@@ -48,6 +48,10 @@
         &.red {
             background-color: $red;
         }
+
+        &.orange {
+            background-color: $orange;
+        }
     }
 
     .modal-text {
