Fix select color when card is selected

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -120,6 +120,10 @@
                     color: $light-grey;
                 }
             }
+
+            .react-select {
+                color: $black;
+            }
         }
 
         &.suspended {
