--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/modal.scss
@@ -98,3 +98,16 @@
     z-index: 10;
     position: relative;
 }
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 100ms ease-out;
+}
+
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+}
