Make it more obvious when hover over a footer link

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/login/login.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/login/login.scss
@@ -136,6 +136,10 @@ footer a {
     @include for-laptop-down {
         color: $blue !important;
     }
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 footer #copyright {
