Center checkbox labels vertically

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -134,6 +134,9 @@
     cursor: pointer;
     user-select: none;
 
+    padding-top: 0.125em;
+    padding-bottom: 0.125em;
+
     .selection-option-value {
         position: absolute;
         opacity: 0;
