Adjust toast layout

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_toastr_overrides.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_toastr_overrides.scss
@@ -10,3 +10,10 @@
 .rrt-warning, .toast-warning {
     background-color: $red !important;
 }
+
+.rrt-right-container > button {
+    margin: 0;
+}
+.rrt-middle-container {
+    padding: 24px 5px !important;
+}
