Update assigned user count immediately
Adjust the response model for UpdateGroup to include assigned user count. Fix bug which doubled-counted users as assigned to selection groups.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -118,6 +118,9 @@
     .admin-panel-content-container {
         flex: 1 1 auto;
     }
+    .admin-panel-action-container {
+        overflow-y: hidden;
+    }
 }
 
 
