Add javascript snippet

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
 
     @*    @Html.Raw(JavaScriptSnippet.FullScript) *@
     @RenderSection("Scripts", required: false)
+    @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body data-nav-location="@ViewData["NavIcon"]">
 
