--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/_ViewImports.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using Microsoft.AspNetCore.Identity
 @using MapDbContextLib.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
