--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_H_F.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout_w_H_F.cshtml
@@ -7,9 +7,9 @@
 }
 
 <div id="content-wrapper">
-    @Html.Partial("_Header")
+    @Html.PartialAsync("_Header")
     @RenderBody()
-    @Html.Partial("_Footer")
+    @Html.PartialAsync("_Footer")
 </div>
 
 @section Scripts {
