--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
@@ -23,7 +23,7 @@ nav {
         left: -21.5vmin;
     }
 
-    &:hover {
+    &.open {
         left: 0;
     }
 
@@ -68,6 +68,16 @@ nav {
             order: 2;
         }
     }
+}
+
+#navBarModalBackground {
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
 }
 
 /* IE Specific overrides */
