Switch to feature sniffing for polyfills
Rather than trying to figure out which browser is being used, instead check for the features that will be polyfilled.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     @RenderSection("CSS", required: false)
 
     <script type="text/javascript">
-        if (/MSIE \d|Trident.*rv:/.test(navigator.userAgent)) {
+        if (!("fetch" in window && "Promise" in window && "Map" in window && "Set" in window)) {
             document.write('<script src="/js/polyfills.min.js"><\/script>');
         }
     </script>
