--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/navbar.scss
@@ -27,22 +27,22 @@ nav {
         left: 0;
 
         #navbar-button-inner:before {
-            transform: translate3d(-1.25vmin, 0.5vmin, 0) rotate(-45deg) scaleX(.7);
+            transform: translate3d(-1.25vmin, 0.6vmin, 0) rotate(-45deg) scaleX(.7);
         }
 
         #navbar-button-inner:after {
-            transform: translate3d(-1.25vmin, -0.5vmin, 0) rotate(45deg) scaleX(.7);
+            transform: translate3d(-1.25vmin, -0.6vmin, 0) rotate(45deg) scaleX(.7);
         }
     }
 
     &.close #navbar-button:hover {
 
         #navbar-button-inner:before {
-            transform: translate3d(1.25vmin, 0.5vmin, 0) rotate(45deg) scaleX(.7);
+            transform: translate3d(1.25vmin, 0.6vmin, 0) rotate(45deg) scaleX(.7);
         }
 
         #navbar-button-inner:after {
-            transform: translate3d(1.25vmin, -0.5vmin, 0) rotate(-45deg) scaleX(.7);
+            transform: translate3d(1.25vmin, -0.6vmin, 0) rotate(-45deg) scaleX(.7);
         }
     }
 
@@ -55,7 +55,7 @@ nav {
         margin: 0;
         width: 6.5vmin;
         height: 6.5vmin;
-        padding: 1vmin;
+        padding: 1.25vmin;
         cursor: pointer;
         transition-timing-function: ease-in-out;
         transition-duration: .15s;
@@ -88,8 +88,8 @@ nav {
             #navbar-button-inner:after {
                 background-color: $white;
                 position: absolute;
-                width: 4.5vmin;
-                height: .25em;
+                width: 4vmin;
+                height: 3px;
                 transition-timing-function: ease-in-out;
                 transition-duration: .15s;
                 transition-property: transform;
