--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -12,8 +12,8 @@
     }
 
     @include for-tablet-up() {
-        flex: 1 0 50%;
-        max-width: 50%;
+        flex: 1 0 33.3%;
+        max-width: 33.3%;
     }
 
     @include for-desktop-up() {
@@ -50,33 +50,13 @@
                 line-height: 1.25em;
                 flex: 1 1 auto;
             }
-
-            .content-card-icons {
-                flex: none;
-                display: flex;
-                flex-flow: row nowrap;
-
-                .action-icon-link {
-                    z-index: 6;
-                    display: block;
-
-                    &:hover {
-                        transform: scale(1.05);
-                        transform-origin: center center;
-                    }
-                }
-
-                .action-icon-container {
-                    margin-left: 1em;
-                }
-            }
         }
 
         .content-card-body {
             flex: 1 0 auto;
 
             .content-card-image {
-                width: 10em;
+                width: 42%;
                 margin-right: 1em;
                 height: auto;
                 float: left;
@@ -86,6 +66,16 @@
                 font-size: .75em;
                 white-space: pre-wrap;
             }
+        }
+
+        .content-card-secondary-actions {
+            flex: 1 0 auto;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: space-around;
+            padding: 0;
+            font-size: .9em;
+            z-index: 10;
         }
 
         .content-card-link {
