Add audit logs around content disclaimer

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml
@@ -10,5 +10,6 @@
 <div>@Model.DisclaimerText</div>
 <form action="/AuthorizedContent/AcceptDisclaimer">
     <input asp-for="SelectionGroupId" style="visibility: hidden;">
+    <input asp-for="ValidationId" style="visibility: hidden;">
     <input id="accept-button" type="submit" value="Click Me" />,
 </form>
