Remove left margin from user and remove icons
Move this all the way to the left of the space to make more room for user information on the right.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -473,7 +473,7 @@
                         display: flex;
                         flex-flow: column nowrap;
                         justify-content: center;
-                        margin: .5em;
+                        margin: .5em .5em .5em 0;
 
                         .card-button-background {
                             margin: 0;
