--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -126,7 +126,7 @@
             .detail-item-icon .action-icon {
                 color: $white;
             }
-            
+
             .react-select {
                 color: $black;
             }
@@ -421,14 +421,14 @@
             width: 100%;
             border: none;
             padding: 0 .75em;
-            transition: .25s all linear;
+            transition: .25s height linear;
             cursor: default;
 
             &[maximized],
             &.maximized {
                 height: auto;
                 overflow: visible;
-                transition: .25s all linear;
+                transition: .25s height linear;
 
                 .card-button-expansion {
                     -webkit-transform: rotateX(180deg);
