--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -66,7 +66,7 @@
             }
 
             .content-card-image {
-                width: 42%;
+                width: 10em;
                 margin-right: 1em;
                 height: auto;
                 float: left;
