Make clickable buttons with SVG icons work properly in Edge
Edge seems to prevent event propagation on clicks on an SVG.  This allows those clicks to pass right through the SVGs, while allowing clicks on the SVG's that we do want to be clickable.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
@@ -26,3 +26,7 @@
         display: none;
     }
 }
+
+svg:not([id='header-logo']):not(.action-icon):not(.cancel-icon):not(.upload-icon) {
+    pointer-events: none;
+}
